# NutriBot

./: .env  README.md  main.py  pyproject.toml  recipes.json  results.json  test.sh  test.txt
src/: main.py
src/agents/: ImageGenerator.py  agent.py  goalagent.py  imageagent.py  nutritionagent.py  recipeagent.py
src/prompt_templates/: templates.py
src/tools/: gen_image.py  get_recipes.py  macrotool.py
